Check connection manager supports protocol listed in profile.

This should fix the issue of skype appearing in the list when telpeathy-haze was installed but pidgin-skype was not.
ConnectionManagers require having becomeReady() called before the list of protocols they support can be used, hence converting from a list of CMs to a hash of CmPtrs

REVIEW: 106515
BUG: 302122